# se.lui.lysator.nisse.nettle-libnettle

./: CMakeLists.txt  build_artifact.py  dependency-log.xml
.github/workflows/: main.yml
cmake/: platform.cmake
cmake/tools/: apply_patches.py  fix_pkgconfig.sh  patch.py
jonchki/: install.py  jonchkicfg.xml  jonchkihere.py  platform_detect.py
libnettle/: CMakeLists.txt  __README__.txt
libnettle/installer/: install.lua  libnettle.xml
